[tool.poetry]
name = "tweet_analyser"
version = "0.0.1"
description = "A tweet analyser"
authors = ["Vadim <fvadim@velikodniy.name>"]
repository = "https://github.com/velikodniy/tweet-analyser"
documentation = "https://velikodniy.github.io/tweet-analyser/"
readme = "README.md"
packages = [
  {include = "tweet_analyser"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.18.1"
deptry = "^0.5.9"
mypy = "^0.961"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["tweet_analyser"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"


